💄 UI: fix a align style bug

--- a/src/index.less
+++ b/src/index.less
@@ -29,14 +29,8 @@
   }
 
   td.@{ant-prefix}-table-cell {
-    a {
-      padding: 0 8px;
+    > a {
       font-size: 14px;
-    }
-    .@{ant-prefix}-space-item {
-      a {
-        padding: 0;
-      }
     }
   }
 }
